[package]
name = "snisnoop-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
snisnoop-common = { path = "../snisnoop-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.8"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "snisnoop"
path = "src/main.rs"
