[package]
name = "spawnsnoop-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
spawnsnoop-common = { path = "../spawnsnoop-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "spawnsnoop"
path = "src/main.rs"
